<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/my_favorite"
        android:icon="@drawable/heart"
        android:title="My Favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/goHome"
        android:icon="@drawable/home"
        android:title="Go Home Page"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/info"
        android:title="Info"
        app:showAsAction="always"
        android:id="@+id/info"/>
</menu>